# ZagMate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDLERS.md  Makefile  README.md
.github/workflows/: build.yml
cmake/exe/: CMakeLists.txt
cmake/shared/: CMakeLists.txt
cmake/static/: CMakeLists.txt
headers/: byteweasel.h  byteweasel_builtin.h  zagmate.h
src/: byteweasel.c  byteweasel_builtin.c  main.c  zagmate.c  zagmate_builtin.c
